<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_block_selected_stroke"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gv_block_board"
                android:layout_width="240dp"
                android:layout_height="432dp"
                android:layout_margin="8dp"
                android:background="@drawable/shape_block_selected_stroke"
                android:horizontalSpacing="0dp"
                android:numColumns="10"
                android:verticalSpacing="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_name"
                    android:textColor="@color/colorBlack" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="10dp">

                    <cn.xydzjnq.tetris.view.LedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:hint="@string/led_text_view_hint"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="18sp" />

                    <cn.xydzjnq.tetris.view.LedTextView
                        android:id="@+id/tv_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_name"
                    android:textColor="@color/colorBlack" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="10dp">

                    <cn.xydzjnq.tetris.view.LedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:hint="@string/led_text_view_level_hint"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="18sp" />

                    <cn.xydzjnq.tetris.view.LedTextView
                        android:id="@+id/tv_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_score_name"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorBlack" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="10dp">

                    <cn.xydzjnq.tetris.view.LedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:hint="@string/led_text_view_hint"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="18sp" />

                    <cn.xydzjnq.tetris.view.LedTextView
                        android:id="@+id/tv_max_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_piece_name"
                    android:textColor="@color/colorBlack" />

                <GridView
                    android:id="@+id/gv_next_piece"
                    android:layout_width="96dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:numColumns="4" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70dp"
            android:orientation="vertical">

            <cn.xydzjnq.tetris.view.GameOverView
                android:id="@+id/gov_anim"
                android:layout_width="100dp"
                android:layout_height="90dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/game_over_view_title"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="36">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="15"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <cn.xydzjnq.tetris.view.ShadowImageView
                        android:id="@+id/btn_pause"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/shape_oval_green"
                        android:clickable="true"
                        app:radiusOffset="0.6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pause"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <cn.xydzjnq.tetris.view.ShadowImageView
                        android:id="@+id/btn_record_list"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/shape_oval_green"
                        android:clickable="true"
                        app:radiusOffset="0.6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <cn.xydzjnq.tetris.view.ShadowImageView
                        android:id="@+id/btn_restart"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/shape_oval_red"
                        android:clickable="true"
                        app:radiusOffset="0.6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restart"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <cn.xydzjnq.tetris.view.ShadowImageView
                    android:id="@+id/btn_space"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/shape_oval_blue"
                    android:clickable="true"
                    app:radiusOffset="0.6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_margin="10dp"
            android:layout_weight="21">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <cn.xydzjnq.tetris.view.ShadowImageView
                    android:id="@+id/btn_up"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@drawable/shape_oval_blue"
                    android:clickable="true"
                    app:radiusOffset="0.6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rotate"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <cn.xydzjnq.tetris.view.ShadowImageView
                    android:id="@+id/btn_left"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@drawable/shape_oval_blue"
                    android:clickable="true"
                    app:radiusOffset="0.6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/left"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <cn.xydzjnq.tetris.view.ShadowImageView
                    android:id="@+id/btn_right"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@drawable/shape_oval_blue"
                    android:clickable="true"
                    app:radiusOffset="0.6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/right"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <cn.xydzjnq.tetris.view.ShadowImageView
                    android:id="@+id/btn_down"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@drawable/shape_oval_blue"
                    android:clickable="true"
                    app:radiusOffset="0.6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/down"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>